# AAA-ML-Blur-Project

./: .gitattributes  .gitignore  .pylintrc  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.py
.github/workflows/: testing.yaml
blur/: processor_utils.py
blur/backend/: config.py  drawing.py  models.py  utils.py
blur/backend/cascade/: cascade.py
blur/backend/retinaface/: core.py  detector.py  net.py
blur/backend/triton/: client_preprocess.py
blur/backend/triton/models/retinaface/: config.pbtxt
blur/backend/triton/utils/: onnx_to_trt.py  test_torch.py  torch_to_onnx.py
blur/backend/triton_server/models/resnet18/: config.pbtxt
blur/frontend/: Dockerfile  app.py  config.py  image.py  mlapi.py  requirements.txt  run.py  views.py
blur/frontend/templates/: index.html  main.js
blur/frontend/templates/style/: style.css
data/: resnet50.pth
docker/backend/: Dockerfile  requirements.txt
docker/frontend/: Dockerfile
docs/: scheme_description.md
ml_server_triton/: Dockerfile  README.md  build_and_run.sh  client_preprocess.py  run.sh  run_docker.sh
ml_server_triton/models/preprocess_model/: config.pbtxt
ml_server_triton/models/preprocess_model/1/: model.py
ml_server_triton/models/resnet18/: config.pbtxt
ml_server_triton/utils/: onnx_to_trt.py  torch_to_onnx.py
notebooks/: 02_baseline.ipynb  03_custom_pretrained_nn.ipynb  04_retina.ipynb  baseline.ipynb
solution_scheme/: scheme_description.md
tests/: test_project.py
tests/unit/models/: test_cascade.py  test_processor.py  test_retina.py  test_retinaface.py
