[tool.poetry]
name = "AAA ML Blur project"
version = "0.1.0"
description = "Тема: 04. Background Blur / Crop / Face Blur / Замена Фона"
authors = [
    "Ruslan Melnic <rmusbuss@gmail.com>",
    "Yaroslav Nikolaev <yarik.nikk@mail.ru>",
    "Donskoi Andrei <donskoi.ae@gmail.com>",
]
packages = [
    { include = "blur/backend", from = "." },
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"
tqdm = "^4.66.1"
torch = "^2.1.1"
pandas = "^2.2.2"
dill = "^0.3.8"
ipython = "^8.23.0"
ipykernel = "^6.29.4"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"
pylint = "^3.1.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''
