[tool.poetry]
name = "blur"
version = "0.1.0"
description = "Тема: 04. Background Blur / Crop / Face Blur / Замена Фона"
authors = [
    "Ruslan Melnic <rmusbuss@gmail.com>",
    "Yaroslav Nikolaev <yarik.nikk@mail.ru>",
    "Donskoi Andrei <donskoi.ae@gmail.com>",
]
packages = [{include = "blur"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.2"
tqdm = "^4.66.1"
torch = "^2.1.1"
opencv-python = "^4.9.0.80"
datasets = "^2.19.1"
jupyter = "^1.0.0"
matplotlib = "^3.9.0"
map-boxes = "^1.0.6"
optuna = "^3.6.1"
torchvision = "^0.18.0"
albumentations = "^1.4.8"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"
pylint = "^3.1.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''
